--- a/v1/package.json
+++ b/v1/package.json
@@ -11,26 +11,26 @@
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-native": "0.74.5",
-    "react-native-paper": "4.9.2",
-    "@expo/vector-icons": "^14.0.2",
     "axios": "*",
-    "@google/generative-ai": "*",
-    "react-native-gifted-chat": "*",
-    "react-native-image-picker": "*",
-    "react-native-vector-icons": "*",
-    "react-native-markdown-display": "*",
-    "@react-native-async-storage/async-storage": "1.23.1",
-    "react-native-typing-animation": "*",
+    "buffer": "*",
     "prop-types": "*",
     "react-native-svg": "15.2.0",
     "react-native-tts": "*",
-    "react-native-gesture-handler": "~2.16.1",
-    "@react-navigation/native": "*",
-    "@react-navigation/stack": "*",
-    "react-native-screens": "3.31.1",
-    "react-native-safe-area-context": "4.10.5",
+    "@expo/vector-icons": "^14.0.2",
+    "react-native-paper": "4.9.2",
     "react-native-voice": "*",
-    "buffer": "*"
+    "react-native-screens": "3.31.1",
+    "@google/generative-ai": "*",
+    "@react-navigation/stack": "*",
+    "@react-navigation/native": "*",
+    "react-native-gifted-chat": "*",
+    "react-native-image-picker": "*",
+    "react-native-vector-icons": "*",
+    "react-native-gesture-handler": "~2.16.1",
+    "react-native-markdown-display": "*",
+    "react-native-typing-animation": "*",
+    "react-native-safe-area-context": "4.10.5",
+    "@react-native-async-storage/async-storage": "1.23.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
